# apps/order-service/src/swagger-output.json
@@ -5,11 +5,9 @@
     "description": "Automatically generate swagger docs",
     "version": "1.0.0"
   },
-  "host": "localhost:4000/order/api",
-  "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "host": "api.bazario.officialshahalam.me",
+  "schemes": ["https"],
+  "basePath": "/order/api",
   "paths": {
     "/create-payment-session": {
       "post": {
